--- a/output.css
+++ b/output.css
@@ -540,7 +540,7 @@ ul {
   margin-right: 1.5rem;
 }
 
-ul li {
+li {
   margin-bottom: 1.5rem;
   background-color: #4a5568;
   padding: 0.75rem 0.5rem;
